Ms.Arch.Hw01/k8s/run-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-arch-hw01

---
#Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
    name: ms-hw01-d
    namespace: ms-arch-hw01
spec:
    selector:
        matchLabels:
            app: ms-hw01-app
    replicas: 2
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    template:
        metadata:
            labels:
                app: ms-hw01-app
        spec:
            containers:
            - image: oveyn/ms-arch-hw01-api:1.0.0
              name: ms-hw01
              ports:
                - name: web
                  containerPort: 5000
              livenessProbe:
                httpGet:
                    port: web
                    path: /health
                initialDelaySeconds: 10
                periodSeconds: 15
                timeoutSeconds: 1
              readinessProbe:
                httpGet:
                    port: web
                    path: /health
                initialDelaySeconds: 10
                periodSeconds: 5

---
#Service

apiVersion: v1
kind: Service
metadata:
    name: ms-hw01-s
    namespace: ms-arch-hw01
spec:
    type: ClusterIP
    selector:
        app: ms-hw01-app
    ports:
        - port: 8000
          targetPort: web

---
#Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ms-hw01-i
    namespace: ms-arch-hw01
    annotations:
        kubernetes.io/ingress.class: nginx
        #nginx.ingress.kubernetes.io/rewrite-target: /$2
        nginx.ingress.kubernetes.io/configuration-snippet: |-
            rewrite ^/otusapp/Oveyn/(.*) /$1 last;
spec:
    rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix          
            backend:
                service:
                    name: ms-hw01-s
                    port:
                        number: 8000
          #- path: /otusapp/Oveyn($|/)(.*)
          #  pathType: Prefix
          #  backend:
          #      service:
          #          name: ms-hw01-s
          #          port:
          #              number: 8000
